// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly a role "guilabel" 1`] = `
<span
  className="guilabel"
>
  Yes
</span>
`;

exports[`renders correctly role "doc" 1`] = `
<a
  class="reference internal"
  href="/cloud/atlas"
>
  Create an Atlas Account and Cluster
</a>
`;

exports[`renders correctly role "doc" when no link title is included 1`] = `
<a
  class="reference internal"
  href="/server/drivers"
>
  Connect to MongoDB
</a>
`;

exports[`renders correctly role "manual" 1`] = `
<a
  className="reference external"
  href="https://docs.mongodb.com/manual/introduction"
>
  The MongoDB Server Manual
</a>
`;

exports[`renders correctly role "program" 1`] = `
<strong
  className="program"
>
  mongoimport
</strong>
`;

exports[`renders correctly role "ref" 1`] = `
<a
  className="reference external"
  href="https://docs.mongodb.com/manual/installation/#mongodb-supported-platforms"
>
  <span
    className="xref std std-ref"
  >
    Supported Platforms
  </span>
</a>
`;

exports[`renders correctly role "term" 1`] = `
<a
  className="reference external"
  href="https://docs.mongodb.com/manual/reference/glossary/#term-dbpath"
>
  data directory
</a>
`;
